test/end-to-end/runnable/main-exit-code-too-big.crow
main nat(_ string[])
	max-value	
