test/end-to-end/compile-errors/type-param-cant-have-type-args.crow
main void()
	()

f[t] void(_ nat t)
	()
